--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,10 @@
   "background_color": "#e3f2e1",
   "theme_color": "#2e7d32",
   "icons": [
-    { "src": "icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "icon-512.png", "sizes": "512x512", "type": "image/png" }
+    {
+      "src": "icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
   ]
 }
