--- a/manifest.json
+++ b/manifest.json
@@ -2,14 +2,12 @@
   "name": "Kiểm Kê",
   "short_name": "Kiểm Kê",
   "start_url": "./",
+  "scope": "./",
   "display": "standalone",
-  "background_color": "#e3f2e1",
-  "theme_color": "#2e7d32",
+  "background_color": "#e6f0ff",
+  "theme_color": "#2563eb",
   "icons": [
-    {
-      "src": "icon-512.png.PNG",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
+    { "src": "icon.PNG", "sizes": "192x192", "type": "image/png" },
+    { "src": "icon.PNG", "sizes": "512x512", "type": "image/png" }
   ]
 }
